# lark-ticket

./: LICENSE  README.md
backend/: .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/etc/: lark-ticket.conf
backend/src/: __init__.py  __main__.py  app.py
backend/src/api/: __init__.py  router.py
backend/src/api/lark/: __init__.py  router.py  service.py
backend/src/api/web/: __init__.py  router.py  service.py
backend/src/db/: __init__.py  base.py  config.py
backend/src/lib/: __init__.py  config.py  const.py  enum.py  event.py  exceptions.py  extension.py  gunicorn_runner.py  middleware.py  schema.py  util.py
backend/src/lib/call/: __init__.py  lark_api.py
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  GlobalConfig.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: api.js
frontend/src/components/ILoading/: index.tsx
frontend/src/components/Loadable/: index.tsx
frontend/src/components/Main/: index.tsx
frontend/src/components/ScrollTop/: index.tsx
frontend/src/layouts/: index.tsx
frontend/src/pages/detail/: Form.tsx  index.tsx  interface.ts
frontend/src/pages/home/: index.tsx
frontend/src/routes/: index.tsx
frontend/src/style/: globals.css
frontend/src/utils/: is.ts
frontend/src/utils/request/: index.ts
